cmake_minimum_required(VERSION 3.10)
project(Test)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_subdirectory(modules)
add_subdirectory(common)
add_executable(server server.cpp)
target_link_libraries(server A1 A2 M1 M2 kalman math ${OpenCV_LIBS})

